<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AbsolutelayoutDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
	<string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="F">F</string>
    <string name="M">M</string>
    <string name="register"><u>Registration Form</u></string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>   

</resources>
